# PolicyHack

./: check.css  check.html  index.html  script.js  style.css  talk.css  talk.html
FakeNews/: main.py  pyproject.toml
FakeNews/templates/: index.html
