[tool.poetry]
name = "policyhack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
panda = "^0.3.1"
sklearn = "^0.0"
jupyterlab = "^3.0.12"
pandas = "^1.2.3"
urllib3 = "^1.26.4"
beautifulsoup4 = "^4.9.3"
bs4 = "^0.0.1"
joblib = "^1.0.1"
flask = "^1.1.2"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
